<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/close_edit_button"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:src="@drawable/ic_close"
        android:background="@null"
        android:layout_marginLeft="355dp"
        android:elevation="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="ContentDescription,RtlHardcoded" />

    <androidx.cardview.widget.CardView
        android:id="@+id/bottom_sheet_header"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:cardBackgroundColor="@color/custom_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="16dp"
            android:text="@string/bottom_sheet_title"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />
        <ImageView
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:src="@drawable/ic_note"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            tools:ignore="ContentDescription,RtlHardcoded" />

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/note_bottom_sheet_main"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        app:layout_constraintTop_toBottomOf="@+id/bottom_sheet_header"
        tools:layout_editor_absoluteX="0dp">

        <EditText
            android:id="@+id/text_input"
            android:layout_width="350dp"
            android:layout_height="300dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:gravity="top"
            android:hint="@string/bottom_sheet_notes_hint"
            android:inputType="textMultiLine"
            tools:ignore="Autofill,RtlHardcoded" />

        <Button
            android:id="@+id/save_text_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="110dp"
            android:layout_marginRight="16dp"
            android:backgroundTint="@color/custom_green"
            android:drawableTint="@color/white"
            android:text="@string/bottom_sheet_save"
            android:textColor="@color/white"
            android:theme="@style/Theme.LaCocina"
            app:icon="@drawable/ic_save"
            app:iconGravity="textStart"
            tools:ignore="UnusedAttribute" />

        <Button
            android:id="@+id/view_notes_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="160dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:backgroundTint="@color/white"
            android:text="@string/bottom_sheet_view_notes"
            android:textColor="@color/custom_green"
            app:iconGravity="textStart"
            app:icon="@drawable/ic_note_green"/>

        <Button
            android:id="@+id/save_as_list_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="210dp"
            android:layout_marginRight="16dp"
            android:backgroundTint="@color/white"
            android:text="@string/bottom_sheet_save_grocery_list"
            android:textColor="@color/custom_green"
            app:icon="@drawable/ic_note_green"
            app:iconGravity="textStart" />


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>