<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/close_note_button"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:src="@drawable/ic_close"
        android:background="@null"
        android:layout_marginLeft="355dp"
        android:elevation="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="ContentDescription,RtlHardcoded" />

    <androidx.cardview.widget.CardView
        android:id="@+id/note_bottom_sheet_header"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:cardBackgroundColor="@color/custom_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/note_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="16dp"
            android:text="@string/bottom_sheet_note_title"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />
        <ImageView
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:src="@drawable/ic_note"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            tools:ignore="ContentDescription,RtlHardcoded" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/note_bottom_sheet_main"
        android:layout_width="match_parent"
        android:layout_height="375dp"
        app:layout_constraintTop_toBottomOf="@+id/note_bottom_sheet_header"
        tools:layout_editor_absoluteX="0dp">

        <EditText
            android:id="@+id/note_input"
            android:layout_width="350dp"
            android:layout_height="300dp"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:background="@null"
            android:hint="@string/hint_notes"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            tools:ignore="Autofill,RtlHardcoded" />

        <Button
            android:id="@+id/save_note_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="160dp"
            android:backgroundTint="@color/custom_green"
            android:text="@string/bottom_sheet_save_note"
            app:icon="@drawable/ic_save"
            android:theme="@style/Theme.LaCocina"/>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>